Address bug #55465 ERROR 1280 (42000): Incorrect index name '<index name>', adding a couple FK related messages.

rb://409 approved by Sunny Bains